fix: Remove embedded api-server.service to fix cloud-init race condition
## Problem
cloud-init's write_files was overwriting the correct api-server.service
that bootstrap.sh copies from the repo. This caused the API server to
start with stale config (missing EnvironmentFile entries for API_SECRET
and API_BIND_ADDRESS).

## Solution
Remove embedded api-server.service from write_files in both YAML files.
Bootstrap.sh already copies from systemd/api-server.service, which is
now the single source of truth.

## Changes
- hatch.yaml: Removed embedded api-server.service, added comment
- hatch-slim.yaml: Same

## Note
Many other scripts are duplicated between scripts/ and embedded in YAML.
This is a broader SSOT violation that should be addressed in a future PR.
See: parse-habitat.py, tg-notify.sh, phase1-critical.sh, etc.

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -376,21 +376,9 @@ write_files:
         exit 0
       fi
       exec /usr/local/bin/set-council-group.telegram.sh "$@"
-  - path: /etc/systemd/system/api-server.service
-    permissions: "0644"
-    content: |
-      [Unit]
-      Description=Droplet Status API
-      After=network.target
-      [Service]
-      EnvironmentFile=/etc/api-server.env
-      EnvironmentFile=-/etc/habitat-parsed.env
-      ExecStart=/usr/local/bin/api-server.py
-      Restart=always
-      RestartSec=3
-      User=root
-      [Install]
-      WantedBy=multi-user.target
+  # NOTE: api-server.service removed from write_files to fix race condition.
+  # Bootstrap.sh copies from systemd/api-server.service (single source of truth).
+  # See: https://github.com/dfrysinger/hatchery/issues/XXX
   - path: /usr/local/bin/apply-config.sh
     permissions: "0755"
     content: |
