--- a/hatch-slim.yaml
+++ b/hatch-slim.yaml
@@ -181,19 +181,8 @@ write_files:
         def _j(self,c,d):self.send_response(c);self.send_header('Content-type','application/json');self.end_headers();self.wfile.write(json.dumps(d).encode())
       class R(socketserver.TCPServer):allow_reuse_address=True
       with R(("",PORT),H) as h:h.serve_forever()
-  - path: /etc/systemd/system/api-server.service
-    permissions: "0644"
-    content: |
-      [Unit]
-      Description=Droplet Status API
-      After=network.target
-      [Service]
-      ExecStart=/usr/local/bin/api-server.py
-      Restart=always
-      RestartSec=3
-      User=root
-      [Install]
-      WantedBy=multi-user.target
+  # NOTE: api-server.service removed from write_files to fix race condition.
+  # Bootstrap.sh copies from systemd/api-server.service (single source of truth).
   - path: /etc/systemd/system/post-boot-check.service
     permissions: "0644"
     content: |
