feat: Add remoteApi boolean flag for simplified remote access
Adds a user-friendly remoteApi boolean flag as an alternative to
setting apiBindAddress manually.

## New Feature

```json
{
  "name": "MyHabitat",
  "remoteApi": true  // Enables iOS Shortcut remote access
}
```

## Behavior

- `remoteApi: true` → API binds to 0.0.0.0 (remote access)
- `remoteApi: false` or omitted → API binds to 127.0.0.1 (secure default)
- `apiBindAddress` takes precedence if explicitly set (advanced override)

## Changes

- scripts/parse-habitat.py: Add remoteApi handling with priority logic
- hatch.yaml: Update inline parse-habitat.py
- scripts/api-server.py: Update security model comments
- docs/SECURITY.md: Document remoteApi option
- docs/minimal-habitat.md: Add remoteApi to field reference
- tests/test_parse_habitat.py: Add 5 new tests for remoteApi

## Testing

```bash
pytest tests/test_parse_habitat.py -v  # 50 passed
```

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -199,8 +199,17 @@ write_files:
           f.write('COUNCIL_JUDGE="{}"\n'.format(council.get("judge", "")))
           f.write('HABITAT_DOMAIN="{}"\n'.format(hab.get("domain", "")))
 
-          # API server bind address (default: 127.0.0.1 for security; set to 0.0.0.0 for remote access)
-          f.write('API_BIND_ADDRESS="{}"\n'.format(hab.get("apiBindAddress", "127.0.0.1")))
+          # API server bind address
+          # Priority: 1. apiBindAddress (explicit override)
+          #           2. remoteApi boolean (user-friendly flag)
+          #           3. Default: 127.0.0.1 (secure-by-default)
+          if "apiBindAddress" in hab:
+              api_bind = hab["apiBindAddress"]
+          elif hab.get("remoteApi", False):
+              api_bind = "0.0.0.0"  # Remote access enabled
+          else:
+              api_bind = "127.0.0.1"  # Secure default
+          f.write('API_BIND_ADDRESS="{}"\n'.format(api_bind))
 
           f.write('GLOBAL_IDENTITY_B64="{}"\n'.format(b64(hab.get("globalIdentity", ""))))
           f.write('GLOBAL_BOOT_B64="{}"\n'.format(b64(hab.get("globalBoot", ""))))
@@ -753,12 +762,12 @@ write_files:
       class R(socketserver.TCPServer):allow_reuse_address=True
       if __name__=='__main__':
         # SECURITY MODEL:
-        # - Default: 0.0.0.0 (all interfaces) for iOS Shortcut remote access
-        # - Configurable via API_BIND_ADDRESS env var or habitat.apiBindAddress
+        # - Default: 127.0.0.1 (localhost only, secure-by-default)
+        # - Enable remote access: set remoteApi: true in habitat config
+        # - Advanced override: apiBindAddress in habitat (takes precedence)
         # - /status, /health: Public (read-only, no secrets, needed for polling)
         # - /stages, /log, /config: HMAC auth required (may contain sensitive info)
         # - /config/upload, /config/apply: HMAC auth required (mutation endpoints)
-        # - Ephemeral droplets (~hours lifetime) limit exposure window
         bind_addr = API_BIND_ADDRESS if API_BIND_ADDRESS != '0.0.0.0' else ''
         print(f"[api-server] Starting on {API_BIND_ADDRESS}:{PORT}")
         with R((bind_addr,PORT),H) as h:h.serve_forever()
