fix: Enable openclaw-restore service before clawdbot starts
The openclaw-restore.service was only being enabled in phase 2, but
clawdbot starts in phase 1. This meant the Wants= dependency was
ineffective — clawdbot would start without waiting for transcript
and memory restore.

Now openclaw-restore is enabled in phase 1 before clawdbot starts,
so the Wants= dependency works correctly and transcripts are
restored before the bot begins.

## Changes
- scripts/phase1-critical.sh: Add systemctl enable openclaw-restore.service
- hatch.yaml: Same (inline version)

## Before
1. Phase 1: clawdbot starts (Wants=restore, but restore not enabled)
2. Phase 2: openclaw-restore enabled (too late)
3. Bot starts with no transcripts

## After
1. Phase 1: openclaw-restore enabled
2. Phase 1: clawdbot starts (waits for restore via Wants=)
3. Bot starts WITH transcripts

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -927,6 +927,9 @@ write_files:
       WantedBy=multi-user.target
       SVC
       systemctl daemon-reload
+      # Enable restore service BEFORE clawdbot so Wants= dependency works
+      # This ensures transcripts/memory are restored before bot starts
+      systemctl enable openclaw-restore.service
       systemctl enable clawdbot
       systemctl start clawdbot
       ufw allow 18789/tcp
