--- a/hatch.yaml
+++ b/hatch.yaml
@@ -926,6 +926,27 @@ write_files:
       [Install]
       WantedBy=multi-user.target
       SVC
+      
+      # Create api-server.service if it doesn't exist (PR #146 removed it from write_files)
+      if [ ! -f /etc/systemd/system/api-server.service ]; then
+      cat > /etc/systemd/system/api-server.service <<'APISVC'
+      [Unit]
+      Description=Droplet Status API
+      After=network.target
+      
+      [Service]
+      EnvironmentFile=-/etc/api-server.env
+      EnvironmentFile=-/etc/habitat-parsed.env
+      ExecStart=/usr/local/bin/api-server.py
+      Restart=always
+      RestartSec=3
+      User=root
+      
+      [Install]
+      WantedBy=multi-user.target
+      APISVC
+      fi
+      
       systemctl daemon-reload
       # Enable and START restore service BEFORE clawdbot (if service file exists)
       # clawdbot has After=openclaw-restore.service, so it waits for restore to complete
