hotfix: Enable and start api-server in phase1-critical.sh
PR #157 added api-server.service creation but not the enable/start.
The runcmd's enable command runs BEFORE phase1 creates the file,
so the service was never actually started.

Adds after the service file creation:
- systemctl enable api-server
- systemctl start api-server || true
- ufw allow 8080/tcp

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -948,6 +948,12 @@ write_files:
       fi
       
       systemctl daemon-reload
+      
+      # Enable and start api-server (created above if it didn't exist)
+      systemctl enable api-server
+      systemctl start api-server || true
+      ufw allow 8080/tcp
+      
       # Enable and START restore service BEFORE clawdbot (if service file exists)
       # clawdbot has After=openclaw-restore.service, so it waits for restore to complete
       if [ -f /etc/systemd/system/openclaw-restore.service ]; then
