hotfix: Move API_SECRET generation to phase1-critical.sh
CRITICAL FIX: The runcmd block ran BEFORE phase1-critical.sh creates
the api-server.service file, so the API_SECRET generation would fail
silently (can't enable a service that doesn't exist). Result: service
runs but API_SECRET="" and all authenticated endpoints return 403.

Changes:
- Add API_SECRET generation to phase1-critical.sh before api-server start
- Remove redundant API_SECRET generation from runcmd (it was failing anyway)
- Simplify runcmd to just call the phase scripts

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -949,6 +949,21 @@ write_files:
       
       systemctl daemon-reload
       
+      # Create API_SECRET if not already set (moved from runcmd which runs before service file exists)
+      if [ ! -f /etc/api-server.env ]; then
+        source /etc/droplet.env 2>/dev/null || true
+        if [ -n "$API_SECRET_B64" ] && [ "$API_SECRET_B64" != "[[API_SECRET_B64]]" ]; then
+          API_SECRET=$(echo "$API_SECRET_B64" | base64 -d)
+          echo "[api-server] Using provided API_SECRET"
+        else
+          API_SECRET=$(openssl rand -hex 32)
+          echo "[api-server] Generated random API_SECRET"
+        fi
+        umask 077
+        printf 'API_SECRET=%s\n' "$API_SECRET" > /etc/api-server.env
+        chmod 600 /etc/api-server.env
+      fi
+      
       # Enable and start api-server (created above if it didn't exist)
       systemctl enable api-server
       systemctl start api-server || true
@@ -2069,29 +2084,8 @@ write_files:
 users:
   - default
 runcmd:
-  - - bash
-    - -lc
-    - |
-      # Set up API_SECRET for the droplet status API
-      # Uses secret from Shortcut if provided, otherwise generates random
-      if [ ! -f /etc/api-server.env ]; then
-        source /etc/droplet.env
-        if [ -n "$API_SECRET_B64" ] && [ "$API_SECRET_B64" != "[[API_SECRET_B64]]" ]; then
-          # Decode Shortcut-provided secret
-          API_SECRET=$(echo "$API_SECRET_B64" | base64 -d)
-          echo "[api-server] Using provided API_SECRET"
-        else
-          # Generate random secret (fallback for older Shortcuts)
-          API_SECRET=$(openssl rand -hex 32)
-          echo "[api-server] Generated random API_SECRET"
-        fi
-        umask 077
-        printf 'API_SECRET=%s\n' "$API_SECRET" > /etc/api-server.env
-        chmod 600 /etc/api-server.env
-      fi
-      systemctl daemon-reload
-      systemctl enable --now api-server
-      ufw allow 8080/tcp
+  # NOTE: API_SECRET generation and api-server enable/start moved to phase1-critical.sh
+  # because this runcmd runs before the service file is created
   - [ bash, -lc, "systemctl enable post-boot-check.service" ]
   - [ bash, -lc, "/usr/local/bin/schedule-destruct.sh" ]
   - [ bash, -lc, "/usr/local/sbin/phase1-critical.sh" ]
