fix: Add API_SECRET_B64 to hatch-slim.yaml
The API_SECRET_B64 placeholder was in hatch.yaml but missing from
hatch-slim.yaml. This caused droplets provisioned with hatch-slim
to not receive the Shortcut-provided API secret, forcing the server
to generate a random one that the Shortcut doesn't know.

--- a/hatch-slim.yaml
+++ b/hatch-slim.yaml
@@ -31,6 +31,7 @@ write_files:
       CALDAV_URL_B64="[[CALDAV_URL_B64]]"
       CALDAV_USER_B64="[[CALDAV_USER_B64]]"
       CALDAV_PASSWORD_B64="[[CALDAV_PASSWORD_B64]]"
+      API_SECRET_B64="[[API_SECRET_B64]]"
       GH_TOKEN_B64="[[GH_TOKEN_B64]]"
       GMAIL_CLIENT_ID_B64="[[GMAIL_CLIENT_ID_B64]]"
       GMAIL_CLIENT_SECRET_B64="[[GMAIL_CLIENT_SECRET_B64]]"
