--- a/hatch.yaml
+++ b/hatch.yaml
@@ -9,7 +9,7 @@ bootcmd:
   - [bash, -lc, "[ -f /var/lib/init-status/setup-complete ]&&[ ! -f /var/lib/init-status/boot-complete ]&&{ echo 11>/var/lib/init-status/stage;echo \"$(date -u +%Y-%m-%dT%H:%M:%SZ) STAGE=11 DESC=ready\">>/var/log/init-stages.log;touch /var/lib/init-status/boot-complete;}||true"]
 write_files:
   - path: /etc/hatchery-version
-    content: "feature/shortcut-api-testing"
+    content: "feature/smart-safe-mode"
   - path: /etc/droplet.env
     owner: root:root
     permissions: "0600"
@@ -135,7 +135,6 @@ write_files:
       [ -f "$DIR/gmail-api.py" ]&&cp "$DIR/gmail-api.py" /usr/local/bin/gmail-api.py&&chmod 755 /usr/local/bin/gmail-api.py
       [ -f "$DIR/set-council-group.sh" ]&&cp "$DIR/set-council-group.sh" /usr/local/bin/set-council-group.telegram.sh&&chmod 755 /usr/local/bin/set-council-group.telegram.sh
       chmod +x /usr/local/sbin/*.sh /usr/local/bin/*.sh 2>/dev/null||true
-      notify "bootstrap: hatchery ${VER} installed -- starting phase1"
       /usr/local/sbin/phase1-critical.sh
 users:
   - default
