feat: Support custom hatchery branch via habitat config
Added [[HATCHERY_VERSION]] placeholder to /etc/hatchery-version.

Usage:
- Shortcut should default to 'main' if habitat has no hatcheryVersion
- To test a feature branch, add to habitat JSON:
  "hatcheryVersion": "feature/branch-name"

This allows testing feature branches without merging to main.

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -9,7 +9,7 @@ bootcmd:
   - [bash, -lc, "[ -f /var/lib/init-status/setup-complete ]&&[ ! -f /var/lib/init-status/boot-complete ]&&{ echo 11>/var/lib/init-status/stage;echo \"$(date -u +%Y-%m-%dT%H:%M:%SZ) STAGE=11 DESC=ready\">>/var/log/init-stages.log;touch /var/lib/init-status/boot-complete;}||true"]
 write_files:
   - path: /etc/hatchery-version
-    content: "main"
+    content: "[[HATCHERY_VERSION]]"
   - path: /etc/droplet.env
     owner: root:root
     permissions: "0600"
