fix: Run parse-habitat.py BEFORE bootstrap.sh
parse-habitat.py extracts hatcheryVersion from habitat JSON and writes
it to /etc/hatchery-version. This must happen BEFORE bootstrap.sh runs,
otherwise bootstrap fetches 'main' before the version is updated.

Boot order now:
1. parse-habitat.py extracts hatcheryVersion → /etc/hatchery-version
2. bootstrap.sh reads /etc/hatchery-version and fetches correct branch

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -139,8 +139,9 @@ write_files:
 users:
   - default
 runcmd:
-  - [bash, -lc, "/usr/local/bin/bootstrap.sh>>/var/log/bootstrap.log 2>&1"]
+  # parse-habitat.py MUST run first to extract hatcheryVersion before bootstrap fetches code
   - [bash, -lc, "set -a;source /etc/droplet.env;set +a;python3 /usr/local/bin/parse-habitat.py"]
+  - [bash, -lc, "/usr/local/bin/bootstrap.sh>>/var/log/bootstrap.log 2>&1"]
   - [bash, -lc, "systemctl daemon-reload;systemctl enable --now api-server;ufw allow 8080/tcp"]
   - [bash, -lc, "systemctl enable post-boot-check.service"]
   - [bash, -lc, "/usr/local/bin/schedule-destruct.sh"]
