refactor: rename clawdbot → openclaw across all scripts, docs, and tests
Service rename:
- clawdbot.service → openclaw.service
- clawdbot-sync.timer → openclaw-sync.timer
- clawdbot-safe-mode.service → openclaw-safe-mode.service
- clawdbot.log → openclaw.log
- clawdbot-memory → openclaw-memory (Dropbox sync path)
- SERVICE_NAME='openclaw' in health check standard mode

Also fixes:
- phase1-critical.sh: bind lan → loopback (was missed in earlier fix)

All 246 bash tests pass. Docker compose Python tests have pre-existing
env permission issue (unrelated to rename).

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -77,7 +77,7 @@ write_files:
     content: |
       [Unit]
       Description=Post-boot health check
-      After=clawdbot.service network-online.target
+      After=openclaw.service network-online.target
       Wants=network-online.target
       [Service]
       Type=oneshot
@@ -85,7 +85,7 @@ write_files:
       RemainAfterExit=yes
       [Install]
       WantedBy=multi-user.target
-  - path: /etc/systemd/system/clawdbot-sync.service
+  - path: /etc/systemd/system/openclaw-sync.service
     permissions: "0644"
     content: |
       [Unit]
@@ -94,7 +94,7 @@ write_files:
       Type=oneshot
       ExecStart=/usr/local/bin/sync-openclaw-state.sh
       User=root
-  - path: /etc/systemd/system/clawdbot-sync.timer
+  - path: /etc/systemd/system/openclaw-sync.timer
     permissions: "0644"
     content: |
       [Unit]
