fix: update tests and scripts for clawdbot→openclaw rename
- Fix test assertions: accounts.default → accounts.agent1
- Fix SBIN_SCRIPTS constant: add lib-permissions.sh
- Fix hatch.yaml sbin case: add lib-permissions.sh
- Fix systemd services: clawdbot.service → openclaw.service in openclaw-restore and post-boot-check
- Fix generate-docker-compose.sh: remove local outside function, add -r check for env files
- Fix gateway-health-check.sh: shellcheck SC2155 and SC2120 warnings
- Fix test_session_mode.py: Restart=always → Restart=on-failure
- Fix test_restore_service.py: regex word boundary to avoid false match
- Fix set-council-group.sh: clawdbot → openclaw

--- a/systemd/openclaw-restore.service
+++ b/systemd/openclaw-restore.service
@@ -2,7 +2,7 @@
 Description=Restore openclaw state from Dropbox
 After=network-online.target
 Wants=network-online.target
-Before=clawdbot.service
+Before=openclaw.service
 
 [Service]
 Type=oneshot
